# agentic-system-oss

./: .gitignore  CONTRIBUTING.md  README.md  VERIFICATION.md  bootstrap.sh
.github/ISSUE_TEMPLATE/: verification-report.md
avir/: Dockerfile  run-verification.sh  verify.py
avir/specs/: benchmarks.json
benchmarks/: run_all.py
claude-config/agents/: code-reviewer.md  debugger.md  explorer.md
claude-config/commands/: add-to-todos.md  check-todos.md  memory-save.md  memory-search.md  quick-review.md
claude-config/hooks/: post-tool-use.py  pre-tool-use.py
docs/: ARCHITECTURE.md  MCP_ECOSYSTEM.md  SERVICES.md
intelligent-agents/personas/: PSYCHOMETRIC_APPROACH_COMPARISON.md  __init__.py  ai_inference_agent.py  builder_agent.py  code_agent.py  ops_agent.py  orchestrator_agent.py  persona_base.py  persona_registry.py  psychometric_generator.py  psychometric_persona.py  research_agent.py  researcher_agent.py  security_agent.py  sentinel_agent.py  small_inference_agent.py
mcp-servers/agent-runtime-mcp/: README.md  requirements.txt  server.py
mcp-servers/ember-mcp/: README.md  package.json
mcp-servers/enhanced-memory-mcp/: README.md  requirements.txt  server.py
mcp-servers/llm-council-mcp/: README.md  pyproject.toml  requirements.txt  server.py
mcp-servers/llm-council-mcp/backend/: __init__.py  cli_providers.py  config.py  council.py  patterns.py
mcp-servers/research-paper-mcp/: requirements.txt  server.py
mcp-servers/safla-mcp/: requirements.txt  server.py
research-paper/: PAPER.md
scripts/: health-check.sh  setup-databases.sh  start-services.sh
(+6 files in other folders)
