[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-council-mcp"
version = "1.0.0"
description = "Multi-provider LLM deliberation system via MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Agentic System Contributors" }
]
keywords = ["mcp", "llm", "deliberation", "council", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
openrouter = [
    "aiohttp>=3.9.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
llm-council-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["backend", "."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
